Añade sección de costes #108

--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -21,6 +21,7 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{amsmath}
 
 \usepackage[table,xcdraw]{xcolor}
 \hypersetup{
@@ -94,10 +95,11 @@
 	%   5. Instalación de la aplicación de manera automática
 	\input{secciones/05_implementacion}
 
-	% Presupuesto
+	% Costes
+	\input{secciones/06_costes}
 
 	% Conclusiones
-	\input{secciones/06_conclusiones}
+	\input{secciones/07_conclusiones}
 
 	% Trabajos futuros
 
