--- a/doc/secciones/06_costes.tex
+++ b/doc/secciones/06_costes.tex
@@ -75,7 +75,7 @@ este proyecto es de:
 
 El proyecto se ha ejecutado localmente, sin necesidad de servidores de pago.
 En caso de publicación futura, podrían emplearse servicios gratuitos como
-\textbf{Vercel}, \textbf{Render} o \textbf{GitHub Pages}, suficientes para el alcance actual del sistema.
+\textbf{Vercel} o \textbf{Render}, suficientes para el alcance actual del sistema.
 En consecuencia, el coste de despliegue es \textbf{0~€}.
 
 \section{Coste total estimado}
