Nombra las herramientas HTML y CSS

--- a/doc/secciones/07_conclusiones.tex
+++ b/doc/secciones/07_conclusiones.tex
@@ -36,7 +36,8 @@ web accesible y funcional que combina aspectos técnicos y humanísticos.
 
 A lo largo del trabajo se han alcanzado los objetivos definidos inicialmente. Se ha diseñado una base 
 de datos coherente con la lógica de la heráldica, se ha implementado una interfaz web con 
-\textbf{Flask} y \textbf{HTML/CSS}, y se ha desarrollado un sistema de búsqueda textual capaz de 
+\textbf{Flask} y el motor de plantillas \textbf{Jinja2}, utilizando \textbf{Pico.css} para la maquetación 
+y el diseño de una interfaz ligera y adaptable, y se ha desarrollado un sistema de búsqueda textual capaz de 
 reconocer esmaltes, figuras y otros atributos relevantes. Además, se han aplicado técnicas de 
 normalización lingüística para mejorar la calidad de las consultas, teniendo en cuenta variantes y 
 sinónimos del vocabulario heráldico.
