Añade enlace a las HUs

--- a/doc/secciones/07_conclusiones.tex
+++ b/doc/secciones/07_conclusiones.tex
@@ -15,7 +15,7 @@ El sistema desarrollado responde directamente a las dos historias de usuario def
 del proyecto, las cuales guiaron su diseño funcional:
 
 \begin{itemize}
-    \item \textbf{HU1: Estudiante de Historia del Arte.} 
+    \item \hyperref[sec:hu1]{\textbf{HU1: Estudiante de Historia del Arte.}}
     El proyecto proporciona una plataforma que permite la búsqueda y consulta de escudos heráldicos 
     a partir de descripciones o atributos, de manera que un usuario interesado, como un estudiante 
     que se encuentra ante un escudo en un edificio o monumento, pueda identificar fácilmente 
@@ -23,7 +23,7 @@ del proyecto, las cuales guiaron su diseño funcional:
     de escudos disponibles en la base de datos es todavía limitado, por lo que se prevé su ampliación 
     en futuras versiones.
 
-    \item \textbf{HU2: Investigador en heráldica.} 
+    \item \hyperref[sec:hu2]{\textbf{HU2: Investigador en heráldica.}} 
     El sistema facilita el análisis, clasificación y filtrado de escudos a través de una base de datos 
     estructurada y consultas textuales flexibles, lo que reduce la dependencia de fuentes analógicas 
     dispersas y mejora la eficiencia en los procesos de estudio y catalogación. Al igual que en el caso 
