--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -14,7 +14,7 @@
 
 {\Huge\bfseries Heráldica para todas \\}
 \noindent\rule[-1ex]{\textwidth}{3pt}\\[3.5ex]
-{\large\bfseries Subtítulo }
+{\large\bfseries Software para facilitar la identificación de escudos heráldicos}
 \end{minipage}
 
 \vspace{2.5cm}
