Añade resumen y palabras clave #3

--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -10,11 +10,25 @@ Lucía González Sánchez\\
 %\vspace{0.7cm}
 
 \vspace{0.5cm}
-\noindent\textbf{Palabras clave}: \textit{software libre}
+\noindent\textbf{Palabras clave}: \textit{heráldica digital, blasones, base de datos, consulta de escudos, 
+software libre, Python, Flask, SQLModel, PostgreSQL, Git, GitHub, metodologías ágiles, desarrollo web}
 \vspace{0.7cm}
 
 \noindent\textbf{Resumen}\\
-	
+El proyecto consiste en el desarrollo de una aplicación web dedicada a la digitalización, gestión y 
+consulta de blasones dentro del ámbito de la heráldica. Utilizando tecnologías de software libre como 
+Python, Flask y SQLModel, la aplicación permite almacenar, consultar y filtrar escudos de armas según 
+diferentes criterios heráldicos, como esmaltes, muebles, piezas o adornos exteriores.
+
+El sistema se apoya en una base de datos estructurada que facilita la organización y el acceso coherente 
+a la información heráldica, sentando las bases para futuras ampliaciones y posibles aplicaciones de 
+inteligencia artificial. El desarrollo se llevó a cabo siguiendo metodologías ágiles y empleando Git y 
+GitHub para el control de versiones y la gestión colaborativa del proyecto, priorizando la modularidad, 
+la escalabilidad y la claridad del código.
+
+Este trabajo ofrece una contribución significativa a la digitalización del patrimonio heráldico, al 
+proporcionar una herramienta moderna, abierta y extensible para la consulta y el estudio sistemático de 
+los escudos de armas.
 
 \cleardoublepage
 
@@ -22,11 +36,23 @@ Lucía González Sánchez\\
 	Lucía González Sánchez\\
 \end{center}
 \vspace{0.5cm}
-\noindent\textbf{Keywords}: \textit{open source}, \textit{floss}
+\noindent\textbf{Keywords}: \textit{digital heraldry, coats of arms, database, coat of arms catalog, 
+free software, Python, Flask, SQLModel, PostgreSQL, Git, GitHub, agile methodologies, web development}, \textit{floss}
 \vspace{0.7cm}
 
 \noindent\textbf{Abstract}\\
+This project presents the development of a web application dedicated to the digitization, management, and 
+retrieval of coats of arms within the field of heraldry. Using open-source technologies such as Python, 
+Flask, and SQLModel, the application enables the storage, querying, and filtering of heraldic records 
+according to various criteria, including tinctures, charges, ordinaries, and external ornaments.
 
+The system relies on a structured database that ensures consistent organization and access to heraldic 
+information, establishing a foundation for future extensions and potential applications of artificial 
+intelligence. The development process followed agile methodologies and employed Git and GitHub for version
+control and collaborative project management, emphasizing modularity, scalability, and code clarity.
+
+This work contributes to the digital preservation of heraldic heritage by providing a modern, open, and 
+extensible tool for the consultation and systematic study of coats of arms.
 
 \cleardoublepage
 
@@ -34,7 +60,7 @@ Lucía González Sánchez\\
 
 \noindent\rule[-1ex]{\textwidth}{2pt}\\[4.5ex]
 
-D. \textbf{Tutora/e(s)}, Profesor(a) del\dots
+D. \textbf{Juan Julián Merelo Guervós}, Profesor(a) del\dots
 
 \vspace{0.5cm}
 
@@ -42,8 +68,8 @@ D. \textbf{Tutora/e(s)}, Profesor(a) del\dots
 
 \vspace{0.5cm}
 
-Que el presente trabajo, titulado \textit{\textbf{Chief}},
-ha sido realizado bajo mi supervisión por \textbf{Estudiante}, y autorizo la defensa de dicho trabajo ante el tribunal
+Que el presente trabajo, titulado \textit{\textbf{Heráldica para todas}},
+ha sido realizado bajo mi supervisión por \textbf{Lucía González Sánchez}, y autorizo la defensa de dicho trabajo ante el tribunal
 que corresponda.
 
 \vspace{0.5cm}
@@ -52,11 +78,11 @@ Y para que conste, expiden y firman el presente informe en Granada a \today.
 
 \vspace{1cm}
 
-\textbf{El/la director(a)/es: }
+\textbf{El director: }
 
 \vspace{5cm}
 
-\noindent \textbf{(nombre completo tutor/a/es)}
+\noindent \textbf{Juan Julián Merelo Guervós}
 
 \chapter*{Agradecimientos}
 
