--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -86,6 +86,4 @@ Y para que conste, expiden y firman el presente informe en Granada a \today.
 
 \chapter*{Agradecimientos}
 
-
-
-
+A todo el que me tuvo paciencia durante el camino, gracias.
