--- a/doc/portada/portada.tex
+++ b/doc/portada/portada.tex
@@ -22,7 +22,7 @@
 \begin{minipage}{\textwidth}
 \centering
 
-\textbf{Autor}\\ {Lucía González Sánchez}\\[2.5ex]
+\textbf{Autora}\\ {Lucía González Sánchez}\\[2.5ex]
 \textbf{Director}\\ {Juan Julián Merelo Guervós}\\[2cm]
 \includegraphics[width=0.3\textwidth]{logos/etsiit_logo.png}\\[0.1cm]
 \textsc{Escuela Técnica Superior de Ingenierías Informática y de Telecomunicación}\\
