Añade enlace al repo en la memoria

--- a/doc/secciones/03_planificacion.tex
+++ b/doc/secciones/03_planificacion.tex
@@ -48,7 +48,7 @@ producto mínimamente viable (o primer milestone):
 \begin{enumerate}
     \item \textbf{Milestone 0: Infraestructura del proyecto - }Este primer hito tiene como 
     objetivo crear la infraestructura del proyecto, incluyendo la creación del repositorio
-    en GitHub, la planificación de los hitos y tareas iniciales, y las herramientas para automatizar
+    en \href{https://github.com/shvtwp/proyecto-TFG}{GitHub}, la planificación de los hitos y tareas iniciales, y las herramientas para automatizar
     la compilación y corrección ortográfica y gramatical de la memoria.
     \item \textbf{Milestone 1: Modelo del problema - }Este milestone tiene como objetivo
     elaborar una base sólida mediante la creación de una representación básica y estructurada
